Made changes to marvel sprite

--- a/WCBuild/index.html
+++ b/WCBuild/index.html
@@ -26,52 +26,52 @@
                     <a href="#lightbox">
                         <div class="sprite"></div>
                         <div class="red_bumper"></div>
-                        <h5>Captain America</h5>
+                        <h5>United States Of America</h5>
                     </a>
                     <!-- <img src="images/cap.jpeg" alt="captain america"> -->
                 </li>
 
                 <li>
                     <a href="#lightbox">
-                        <div class="sprite" id="carol"></div>
+                        <div class="sprite" id="France"></div>
                         <div class="red_bumper"></div>
-                        <h5>Captain Marvel</h5>
+                        <h5>France</h5>
                     </a>
                     <!-- <img src="images/carol.jpeg" alt="captain marvel"> -->
                 </li>
 
                 <li>
                     <a href="#lightbox">
-                    <div class="sprite" id="clint"></div>
+                    <div class="sprite" id="Ghana"></div>
                     <div class="red_bumper"></div>
-                    <h5>Hawkeye</h5>
+                    <h5>Ghana</h5>
                 </a>
                     <!-- <img src="images/clint.jpeg" alt="hawkeye"> -->
                 </li>
 
                 <li>
                     <a href="#lightbox">
-                        <div class="sprite" id="hulk"></div>
+                        <div class="sprite" id="Brazil"></div>
                         <div class="red_bumper"></div>
-                        <h5>Hulk</h5>
+                        <h5>Brazil</h5>
                     </a>
                     <!-- <img src="images/hulk.jpeg" alt="hulk"> -->
                 </li>
 
                 <li>
                     <a href="#lightbox2">
-                        <div class="sprite" id="thor"></div>
+                        <div class="sprite" id="Canada"></div>
                         <div class="red_bumper"></div>
-                        <h5>Thor</h5>
+                        <h5>Canada</h5>
                     </a>
                     <!-- <img src="images/thor.jpeg" alt="thor"> -->
                 </li>
 
                 <li>
                     <a href="#lightbox">
-                        <div class="sprite" id="widow"></div>
+                        <div class="sprite" id="Senegal"></div>
                         <div class="red_bumper"></div>
-                        <h5>Black Widow</h5>
+                        <h5>Senegal</h5>
                     </a>
                     <!-- <img src="images/widow.jpeg" alt="black widow"> -->
                 </li>
