made changes to lightbox

--- a/WCBuild/index.html
+++ b/WCBuild/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marvel Characters Team Page</title>
+    <title>FIFA WORLD CUP</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,12 +32,12 @@
                 </li>
 
                 <li>
-                    <a href="#lightbox">
+                    <a href="#lightbox2">
                         <div class="sprite" id="France"></div>
                         <div class="red_bumper"></div>
                         <h5>France</h5>
                     </a>
-                    <!-- <img src="images/carol.jpeg" alt="captain marvel"> -->
+                    <!-- <img src="images/carol.jpeg" alt=""> -->
                 </li>
 
                 <li>
@@ -46,7 +46,7 @@
                     <div class="red_bumper"></div>
                     <h5>Ghana</h5>
                 </a>
-                    <!-- <img src="images/clint.jpeg" alt="hawkeye"> -->
+                    <!-- <img src="images/clint.jpeg" alt=""> -->
                 </li>
 
                 <li>
@@ -55,16 +55,16 @@
                         <div class="red_bumper"></div>
                         <h5>Brazil</h5>
                     </a>
-                    <!-- <img src="images/hulk.jpeg" alt="hulk"> -->
+                    <!-- <img src="images/hulk.jpeg" alt=""> -->
                 </li>
 
                 <li>
-                    <a href="#lightbox2">
+                    <a href="#lightbox">
                         <div class="sprite" id="Canada"></div>
                         <div class="red_bumper"></div>
                         <h5>Canada</h5>
                     </a>
-                    <!-- <img src="images/thor.jpeg" alt="thor"> -->
+                    <!-- <img src="images/thor.jpeg" alt=""> -->
                 </li>
 
                 <li>
@@ -73,7 +73,7 @@
                         <div class="red_bumper"></div>
                         <h5>Senegal</h5>
                     </a>
-                    <!-- <img src="images/widow.jpeg" alt="black widow"> -->
+                    <!-- <img src="images/widow.jpeg" alt=""> -->
                 </li>
             </ul>
         </nav>
@@ -96,14 +96,14 @@
         <!-- hero image on the left, text on the right -->
         <!-- her image is a background image -->
         <article>
-            <h3 class="lb_heading">Update This</h3>
+            <h3 class="lb_heading">United States Of America</h3>
             <p class="lb_text">
-                UPDATE THIS
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum autem pariatur dicta eum dolorum nulla neque laborum praesentium quo possimus, mollitia, dolor omnis rerum dolorem ratione in natus? Nihil, mollitia!
+                The United States men's national soccer team (USMNT) represents the United States in men's international soccer competitions. The team is controlled by the United States Soccer Federation and is a member of FIFA and CONCACAF.The U.S. team has appeared in eleven FIFA World Cups, including the first in 1930, where they reached the semi-finals. They returned in 1934 and 1950, defeating England 1–0 in the latter, but did not qualify again until 1990. As host in 1994, the U.S. received an automatic berth and lost to Brazil in the round of sixteen. They qualified for the next five World Cups (seven consecutive appearances (1990–2014), a feat shared with only seven other nations),[9] becoming one of the tournament's regular competitors and often advancing to the knockout stage. 
+
             </p>
             <p class="lb_text">
-                UPDATE THIS
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga quaerat totam, unde quam aspernatur quasi delectus sed earum nobis voluptate voluptas suscipit repudiandae explicabo placeat numquam error. Praesentium, quisquam illum.
+                The U.S. also competes in continental tournaments, including the CONCACAF Gold Cup and Copa América. The U.S. won seven Gold Cups and the inaugural edition of the CONCACAF Nations League, and finished fourth in two Copa Américas in 1995 and 2016. The team's head coach is Gregg Berhalter who's been in charge of the team since November 29, 2018,[10] and Brian McBride is its general manager since January 10, 2020.
+
             </p>
         </article>
     </section>
