--- a/WCBuild/index.html
+++ b/WCBuild/index.html
@@ -28,7 +28,7 @@
                         <div class="red_bumper"></div>
                         <h5>United States Of America</h5>
                     </a>
-                    <!-- <img src="images/cap.jpeg" alt="captain america"> -->
+                    <!-- <img src="images/cap.jpeg" alt=""> -->
                 </li>
 
                 <li>
